# named-tup

./: Cargo.toml  README.md  build.rs  grammar.pest  tup_finder.rs
.github/: dependabot.yml
.github/workflows/: main.yml
example/: Cargo.toml
example/.cargo/: config.toml
example/example/: Cargo.toml
example/example/src/: main.rs  test.rs
example/src/: main.rs
examples/auto/: Cargo.toml  build.rs
examples/auto/src/: main.rs
examples/manual/: Cargo.toml
named-tup/: Cargo.toml
named-tup-derive/: Cargo.toml  build.rs  dev_idents.in  grammar.pest  tup_finder.rs
named-tup-derive/src/: lib.rs  sealed.rs  tup_default.rs  tup_element.rs  tup_invocation.rs  tup_struct.rs
named-tup/src/: combine.rs  convert.rs  lib.rs  tup_struct.rs
src/: combine.rs  convert.rs  grammar.pest  lib.rs  tup.rs  tup_struct.rs
