[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
named-tup = { version = "0.1.0", path = "../named-tup" }

[package.metadata.inwelling]
named-tup-derive = true