[package]
name = "named-tup-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[build-dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"

[dependencies]
syn = { version = "1.0.91", features = ["full", "visit-mut"] }
quote = "1.0.17"
proc-macro2 = "1.0.37"
educe = { version = "0.4.19", features = ["PartialEq", "Eq", "PartialOrd", "Ord"] }
uuid = { version = "0.8.2", features = ["v4"] }