[package]
name = "named-tup-derive"
version = "0.1.1"
edition = "2021"
documentation = "https://docs.rs/named-tup/"
license = "MIT OR Apache-2.0"
authors = ["miam-miam100 <MiamMiam@mailbox.org>"]
repository = "https://github.com/miam-miam100/named-tup"
description = "A helper macro crate for the named-tup crate"

[lib]
proc-macro = true

[build-dependencies]


[dependencies]
syn = { version = "1.0.91", features = ["visit-mut", "full"] }
quote = "1.0.17"
proc-macro2 = "1.0.37"
uuid = { version = "0.8.2", features = ["v4"] }
once_cell = "1.10.0"