[package]
name = "named-tup-derive"
version = "0.2.0"
edition = "2021"
documentation = "https://docs.rs/named-tup/"
license = "MIT OR Apache-2.0"
authors = ["miam-miam100 <MiamMiam@mailbox.org>"]
repository = "https://github.com/miam-miam100/named-tup"
description = "A helper macro crate for the named-tup crate"

[lib]
proc-macro = true

[build-dependencies]
syn = { version = "1.0.92", features = ["visit", "full"] }
quote = "1.0.17"
proc-macro2 = "1.0.37"
inwelling = "0.4.0"

[dependencies]
syn = { version = "1.0.92", features = ["visit-mut", "full"] }
quote = "1.0.17"
proc-macro2 = "1.0.37"
uuid = { version = "1.0.0", features = ["v4"] }

[features]
default = []
add_dev_idents = []