[package]
name = "named-tup"
version = "0.1.0"  # don't forget to update html_root_url and version in readme for breaking changes
edition = "2021"
authors = ["miam-miam100 <MiamMiam100@mailbox.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/miam-miam100/named-tup"
documentation = "https://docs.rs/named-tup/"
readme = "README.md"
description = "Create named tuples using the tup!() macro."
keywords = ["named-arguments", "default-arguments", "named-tuple", "tup"]
categories = ["rust-patterns"]

[dependencies]
named-tup-derive = { version = "0.1.0", path = "../named-tup-derive" }

[build-dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"

[features]
default = []
dev-test = [] # Should only be used for testing this crate as it adds extra tup identifiers that are used in the tests


[package.metadata.inwelling-named-tup-derive]
feature = "dev-test"

[package.metadata.inwelling]
named-tup-derive = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]